src/test/ui/issues/issue-32326.stderr
error[E0072]: recursive type `Expr` has infinite size
  --> $DIR/issue-32326.rs:5:1
   |
LL | enum Expr {
   | ^^^^^^^^^ recursive type has infinite size
LL |     Plus(Expr, Expr),
   |          ----  ---- recursive without indirection
   |          |
   |          recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `Expr` representable
   |
LL |     Plus(Box<Expr>, Box<Expr>),
   |          ^^^^    ^  ^^^^    ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
